# termux-fixit

./: LICENSE  README.md  pyproject.toml
fixit/: __init__.py  cli.py  detectors.py  packages.py  scanner.py  ui.py
termux_fixit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
