[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termux-fixit"
version = "1.0.0"
description = "Fix Python ModuleNotFoundError, build failures, and pip errors that are specific to Termux/Android."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
    { name = "hunzo1" }
]
keywords = [
    "termux",
    "android",
    "pip-error",
    "modulenotfounderror",
    "python-error-fix",
    "termux-python",
    "cli",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.optional-dependencies]
pretty = ["rich>=13.0.0"]

[project.urls]
Homepage = "https://github.com/hunzo1/termux-fixit"
Repository = "https://github.com/hunzo1/termux-fixit"
Issues = "https://github.com/hunzo1/termux-fixit/issues"

[project.scripts]
fixit = "fixit.cli:main"

[tool.setuptools]
packages = ["fixit"]
